fixed name spacing in profile page

--- a/app/assets/stylesheets/prizes.css.scss
+++ b/app/assets/stylesheets/prizes.css.scss
@@ -603,7 +603,7 @@ div.active {
 }
 
 #available_prizes_button {
-  background-color: #00bbbb;
+  background-color: #60BB50;
   border-radius: 2px;
   height: 40px;
   width: 50px;
