--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -195,7 +195,7 @@ ul#user_right_panel {
       text-align: center;
       padding-top: 25px;
       margin-top: 50px;
-      margin-left: 40px;
+      margin-left: 0px;
       .user_points_bg {
         margin: -5px 0px 0px 0px;
         width: 100px;
